--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
+repository: Techy-Wu/133can
 repository_tree: master
 
 
